@@ -155,17 +155,17 @@
 	add_action( 'widgets_init', 'myknowledgebase_widgets_init' );
 
 
-// Custom excerpt lenght 
-	function myknowledgebase_excerpt_length( $length ) { 
-		return 75; } 
-	add_filter( 'excerpt_length', 'myknowledgebase_excerpt_length', 999 ); 
-
-
 // Add class to the excerpt 
 	function myknowledgebase_excerpt( $excerpt ) {
     		return str_replace('<p', '<p class="excerpt"', $excerpt);
 		}
 	add_filter( "the_excerpt", "myknowledgebase_excerpt" );
+
+
+// Custom excerpt lenght (default length is 55 words)
+	function myknowledgebase_excerpt_length( $length ) { 
+		return 75; } 
+	add_filter( 'excerpt_length', 'myknowledgebase_excerpt_length', 999 ); 
 
 
 // Theme Customizer (option to add logo)
