@@ -21,7 +21,8 @@
 
 	<?php endwhile; ?>
 
-	<h5><?php edit_post_link( __( 'Edit', 'myknowledgebase' ), '<span class="edit-link">', '</span>' ) ?></h5>
+	<?php edit_post_link( __( 'Edit', 'myknowledgebase' ), '<h5><span class="edit-link">', '</span></h5>' ) ?>
+
 </div>		
 	
 <?php get_sidebar(); ?>
