@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+MyKnowledgeBase version 1.6 - december 2014 
+- added French translation
+- several css adjustments
+
 MyKnowledgeBase version 1.5 - november 2014 
 - several css adjustments
 
